color and text changes to homepage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BC CS Club",
-  "name": "Brooklyn College Computer Science Club",
+  "short_name": "PCS",
+  "name": "Political Computer Science @ Berkeley",
   "icons": [
     {
       "src": "favicon.ico",
