--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-burger-menu": "^2.7.1",
     "react-content-loader": "^5.1.0",
     "react-dom": "^16.13.1",
+    "react-horizontal-scroll-container": "^1.0.1",
+    "react-indiana-drag-scroll": "^1.6.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
