--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bccompsci.club",
+  "name": "pcsberkeleysite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
-    "dayjs": "^1.8.34",
+    "dayjs": "^1.8.35",
     "empty": "^0.10.1",
     "flow-bin": "^0.131.0",
     "postcss-normalize": "^9.0.0",
@@ -18,14 +18,14 @@
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.3.0",
     "react-burger-menu": "^2.7.1",
-    "react-content-loader": "^5.1.0",
+    "react-content-loader": "^5.1.1",
     "react-dom": "^16.13.1",
     "react-horizontal-scroll-container": "^1.0.1",
     "react-indiana-drag-scroll": "^1.6.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.0",
+    "react-scroll": "^1.8.1",
     "react-share": "^4.2.1",
     "react-snap": "^1.23.0",
     "sass": "^1.26.10",
@@ -36,12 +36,12 @@
     "typewriter-effect": "^2.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
+    "@babel/cli": "^7.11.5",
+    "@babel/core": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
-    "netlify-cli": "^2.59.1",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
+    "netlify-cli": "^2.61.0",
+    "prettier": "^2.1.1",
+    "stylelint": "^13.7.0",
     "stylelint-config-standard": "^20.0.0"
   },
   "scripts": {
